--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div>
             <span id="ampm">AM</span>
+            <span id="ampm">PM</span>
         </div>
     </div>
     <script src="index.js"></script>
